--- a/profile.gg/src/styles/components.css
+++ b/profile.gg/src/styles/components.css
@@ -36,3 +36,28 @@ img{
 .char-img{
     width: 150%;
 }
+
+#background-login{
+    background-image: url('../assets/back.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    min-width: 100vw;
+    padding: 0;
+    margin: 0;
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.my-input{
+    width: 50vw;
+}
+
+#background-profile{
+    background-image: url('../assets/background-profile.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
